--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,19 @@ a:hover {
   color: #113c00;
 }
 
+a:focus {
+  outline: 3px solid #000;
+}
+
+.skip-links a {
+  position: absolute;
+  top: -3em;
+}
+
+.skip-links a:focus {
+  top: 0;
+}
+
 .masthead {
   background-color: #568c36;
 
@@ -82,6 +95,14 @@ td {
 .footer {
   background-color: #113c00;
   color: #fff;
+}
+
+.rando {
+  display: block;
+}
+
+.under {
+  text-decoration: underline;
 }
 
 @media only screen and (min-width: 35em) {
